syntax = "proto3";

package karma8.discovery.files.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "karma8-discovery/files/file.proto";
import "karma8-discovery/subjects/subject.proto";

option go_package = "github.com/mantyr/karma8-http-file-storage-service/api/karma8-discovery/files";

service FileService {
  // Add добавляет информацию о новом файле и помечает его пустым (см. метод Finish)
  rpc Add(AddRequest) returns (AddResponse) {
    option (google.api.http) = {
      post: "/api/v1/namespaces/{namespace_id}/files"
      body: "*"
    };
  }
  // Finish помечает файл как закачанным
  rpc Finish(FinishRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/api/v1/namespaces/{namespace_id}/files/{file_id}/finish"
    };
  }
  // List возвращает список всех зарегистрированных файлов
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/api/v1/namespaces/{namespace_id}/files"
    };
  }
  // GetByFileID возвращает информацию о файле по идентификатору
  rpc GetByFileID(GetByFileIDRequest) returns (GetByFileIDResponse) {
    option (google.api.http) = {
      get: "/api/v1/namespaces/{namespace_id}/files/{file_id}"
    };
  }
  // GetByFileName возвращает информацию о файле по названию
  rpc GetByFileName(GetByFileNameRequest) returns (GetByFileNameResponse) {
    option (google.api.http) = {
      get: "/api/v1/namespaces/{namespace_id}/files/get-by-name/{file_name}"
    };
  }
  // Enable включает доступность файла для использования
  rpc Enable(EnableRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/api/v1/namespaces/{namespace_id}/files/{file_id}/enable"
    };
  }
  // Disable отключает доступность файла для использования
  rpc Disable(DisableRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/api/v1/namespaces/{namespace_id}/files/{file_id}/disable"
    };
  }
  // Delete удаляет информацию о файле
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/namespaces/{namespace_id}/files/{file_id}"
    };
  }
}

// AddRequest это запрос на добавление информации о новом файле
message AddRequest {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // FileName это название файла в пространстве для хранения файлов
  string file_name = 2;

  // Enabled это флаг указывающий что файл доступен для использования
  bool enabled = 3;

  // Creator это информация о субъекте который создал запись
  karma8.discovery.subjects.v1.Subject creator = 4;
}

// AddResponse это ответ на запрос на добавление информации о новом файле
message AddResponse {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // FileID это идентификатор файла
  string file_id = 2;

  // Servers это перечень идентификаторов серверов на которых будут храниться части файла
  repeated string servers = 3;
}

// FinishRequest это запрос на отметку файла как закачанный
message FinishRequest {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // FileID это идентификатор файла
  string file_id = 2;

  // Size это размер файла
  int64 size = 3;

  // Updater это информация о субъекте который внёс последнии изменения в запись
  karma8.discovery.subjects.v1.Subject updater = 4;
}

// ListRequest это запрос всех зарегистрированных файлов в рамках пространства для хранения файлов
message ListRequest {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;
}

// ListResponse это ответ на запрос всех зарегистрированных файлов
message ListResponse {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // Files это перечень файлов зарегистрированных в пространстве
  repeated File files = 2;
}

// GetByFileIDRequest это запрос на получение информации о файле по идентификатору
message GetByFileIDRequest {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // FileID это идентификатор файла
  string file_id = 2;
}

// GetByFileIDResponse это ответ на запрос на получение информации о файле по идентификатору
message GetByFileIDResponse {
  // File это информация о файле
  File file = 1;
}

// GetByFileNameRequest это запрос на получение информации о файле по названию
message GetByFileNameRequest {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // FileName это название файла
  string file_name = 2;
}

// GetByFileNameResponse это ответ на запрос на получение информации о файле по названию
message GetByFileNameResponse {
  // File это информация о файле
  File file = 1;
}

// EnableRequest это запрос на включение доступности ранее выключенного файла
message EnableRequest {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // FileID это идентификатор файла
  string file_id = 2;

  // Updater это информация о субъекте который внёс последнии изменения в запись
  karma8.discovery.subjects.v1.Subject updater = 3;
}

// DisableRequest это запрос на выключение доступности файла
message DisableRequest {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // FileID это идентификатор файла
  string file_id = 2;

  // Updater это информация о субъекте который внёс последнии изменения в запись
  karma8.discovery.subjects.v1.Subject updater = 3;
}

// DeleteRequest это запрос на удаление информации о файле
message DeleteRequest {
  // NamespaceID это идентификатор пространства
  string namespace_id = 1;

  // FileID это идентификатор файла
  string file_id = 2;

  // Updater это информация о субъекте который внёс последнии изменения в запись
  karma8.discovery.subjects.v1.Subject updater = 3;
}
